syntax = "proto3";

package api;
import "google/api/annotations.proto";

option go_package = "./api";

message AccountRequest {
  repeated string address = 1;
  uint64 height = 2;
}

message AccountResponse {
  uint64 height = 1;
  string contract_address = 2;
  repeated string balance  = 3;
}

message AccountErc20TokenRequest {
  repeated string address = 1;
  uint64 height = 2;
  string contract_address = 3;
}

service AccountService {
  rpc GetIotexBalanceByHeight(AccountRequest) returns (AccountResponse) {
    option (google.api.http) = {
      post: "/api.AccountService.GetIotexBalanceByHeight"
      body: "*"
    };
  };
  rpc GetErc20TokenBalanceByHeight(AccountErc20TokenRequest) returns (AccountResponse) {
    option (google.api.http) = {
      post: "/api.AccountService.GetErc20TokenBalanceByHeight"
      body: "*"
    };
  };

}